--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PingPong</title>
+    <style>
+        canvas{ border:solid;}
+    </style>
 </head>
 <body>
-    <h1>Hellow World
-    </h1>
+    <h1>PingPong</h1>
+    <canvas id="canvas"> </canvas>
+    <script src="main.js"></script>
 </body>
 </html>
