Creacion de las barras del pingpong mediante la funcion draw de la clase board_view. Practica MVC parte2

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <body>
     <h1>PingPong</h1>
     <canvas id="canvas"> </canvas>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
